# oid4vc-cli-wallet

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs  mdoc_oid4vp.rs  oid4vci.rs  tests.rs  wallet.rs
test/: portrait.b64  signer-cert.pem  signer-key.pem
