[package]
name = "vp_interop_cli_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
isomdl180137 = { git = "ssh://git@github.com/spruceid/isomdl-18013-7.git", rev = "246b710", version = "0.1.0" }
p256 = { version = "0.13.2", features = ["jwk"] }
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.183"
serde_json = "1.0.105"
time = "0.3.25"
tokio = { version = "1.32.0", features = ["macros", "rt", "fs", "io-util"] }
url = "2.4.0"
