[package]
name = "vp_interop_cli_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.21", features = ["derive"] }
isomdl180137 = { git = "ssh://git@github.com/spruceid/isomdl-18013-7.git", rev = "b8b77e4" }
josekit = { git = "https://github.com/cobward/josekit-rs", rev = "635c8a7" }
oidc4vp = { git = "https://github.com/spruceid/oidc4vp-rs.git", rev = "ef2aa2f" }
open = "5.0.0"
p256 = { version = "0.13.2", features = ["jwk"] }
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.183"
serde_json = "1.0.105"
ssi = "0.7.0"
time = "0.3.25"
tokio = { version = "1.32.0", features = ["macros", "rt", "fs", "io-util"] }
url = "2.4.0"
