[package]
name = "openid4vc-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.2"
clap = { version = "4.3.21", features = ["derive"] }
isomdl180137 = { git = "https://github.com/spruceid/isomdl-18013-7", rev = "7ee8bdb" }
josekit = { git = "https://github.com/cobward/josekit-rs", rev = "635c8a7" }
oidc4vp = { git = "https://github.com/spruceid/oidc4vp-rs.git", rev = "f9557eb" }
oid4vci = { git = "https://github.com/spruceid/oid4vci-rs.git", rev = "612ea3b" }
inquire = "0.6.2"
open = "5.0.0"
p256 = { version = "0.13.2", features = ["jwk"] }
rand = "0.8.5"
reqwest = "0.11.20"
serde = "1.0.183"
serde_json = "1.0.105"
didkit = "0.6.0"
time = "0.3.25"
tokio = { version = "1.32.0", features = ["macros", "rt", "fs", "io-util"] }
url = "2.4.0"
x509-cert = "0.2.4"
